--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
 		<title>ホーム｜葉-YaozeYE</title>
 	</head>
 	<body>
-		<h1 style="text-shadow: 1px 15px 45px #993300;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
-		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>Happy<br />New Year<br />2021</b></i></h2>
+		<h1 style="text-shadow: 0.25em 2.5em 7.5em #993300;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
+		<h2 style="font-size:4em;color:white;text-shadow: 0.125em 0.125em 0.25em #F00, 0 0 1em #00F, 0 0 0.2em #00F;"><i><b>VIVE<br />LA<br />2021</b></i></h2>
 		<p><a href="weeklymusic.html" style="text-decoration:none;" rel="external"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
-		<p><a href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;" rel="external">page-loading-effects(HTML5)</a><br /></p>
-		<p><a href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;" rel="external">grid-effect(HTML5)</a><br /></p>
-		<p><a href="number-progress/index.html" style="font-size:1.5em;color:#176785;" rel="external">number-progress(HTML5)</a><br /></p>
+		<p><a rel="external" href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;text-shadow: 0.5em 0.5em 2em #F6C;">Page Loading Effects (HTML5)</a><br /></p>
+		<p><a rel="external" href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;text-shadow: 0.5em 0.5em 2em #F6C;">Grid Effect (HTML5)</a><br /></p>
+		<p><a rel="external" href="number-progress/index.html" style="font-size:1.5em;color:#176785;text-shadow: 0.5em 0.5em 2em #F6C;">Number Progress (HTML5)</a><br /></p>
 		
-		<p><a href="simulation/physics/faradays-law_en/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">Faraday's Law(HTML5)</a><br /></p>
-		<p><a href="simulation/physics/capacitor-lab-basics_en/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
-		<p><a href="simulation/physics/circuit-construction-kit-dc_en/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
-		<p><a href="simulation/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFFFFF;" rel="external">circuit-construction-kit-ac(JAVA)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/faradays-law_en/faradays-law_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Faraday's Law (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/capacitor-lab-basics_en/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Capacitor LabBasics (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/circuit-construction-kit-dc_en/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Circuit Construction Kit DC (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Circuit Construction Kit AC (JAVA)</a><br /></p>
 		
-		<p><a rel="external" href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">Webgl Clouds (HTML5)</a><br /></p>
-		<p><a rel="external" href="crazy.html" style="font-size:1.5em;color:purple;">Crazy Tentacles (HTML5)</a><br /></p>
-		<p><a rel="external" href="Demo1.html" style="font-size:1.5em;color:red;">Page Preloading (HTML5)</a><br /></p>
-		<p><a rel="external" href="ball.html" style="font-size:1.5em;color:black;">Ball Pool (HTML5)</a><br /></p>
-		<p><a rel="external" href="textillate.html" style="font-size:1.5em;color:white;">Textillate (HTML5)</a><br /></p>
-		<p><a rel="external" href="shine.html" style="font-size:1.5em;color:grey;">Shine (HTML5)</a><br /></p>
-		<p><a rel="external" href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles (Javascript)</a><br /></p>
-		<p><a rel="external" href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">Loading (HTML5)</a><br /></p>
-		<p><a rel="external" href="snake.html" style="font-size:1.5em;color:#FFB6C1;">Snake (HTML5)</a><br /></p>
-		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:green;">HTML Colour</a><br /><br /><br /></p>
+		<p><a rel="external" href="webgl-clouds.html" style="font-size:1.5em;color:#326696;text-shadow: 0.5em 0.5em 2em #F6C;">Webgl Clouds (HTML5)</a><br /></p>
+		<p><a rel="external" href="crazy.html" style="font-size:1.5em;color:#A020F0;text-shadow: 0.5em 0.5em 2em #F6C;">Crazy Tentacles (HTML5)</a><br /></p>
+		<p><a rel="external" href="Demo1.html" style="font-size:1.5em;color:#F00;text-shadow: 0.5em 0.5em 2em #F6C;">Page Preloading (HTML5)</a><br /></p>
+		<p><a rel="external" href="ball.html" style="font-size:1.5em;color:#000;text-shadow: 0.5em 0.5em 2em #F6C;">Ball Pool (HTML5)</a><br /></p>
+		<p><a rel="external" href="textillate.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Textillate (HTML5)</a><br /></p>
+		<p><a rel="external" href="shine.html" style="font-size:1.5em;color:#BEBEBE;text-shadow: 0.5em 0.5em 2em #F6C;">Shine (HTML5)</a><br /></p>
+		<p><a rel="external" href="bubble.html" style="font-size:1.5em;color:#09F;text-shadow: 0.5em 0.5em 2em #F6C;">Bubbles (Javascript)</a><br /></p>
+		<p><a rel="external" href="loading.html" style="font-size:1.5em;color:#FF3C9B;text-shadow: 0.5em 0.5em 2em #F6C;">Loading (HTML5)</a><br /></p>
+		<p><a rel="external" href="snake.html" style="font-size:1.5em;color:#FFB6C1;text-shadow: 0.5em 0.5em 2em #F6C;">Snake (HTML5)</a><br /></p>
+		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:#0F0;text-shadow: 0.5em 0.5em 2em #F6C;">HTML Colour</a><br /><br /><br /></p>
 		<!--Function Link Ending-->
 		<!--Personal Info-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
@@ -57,9 +57,9 @@
 		<p><a rel="external" href="https://www.youracclaim.com/badges/da545540-e511-4c98-ae7e-2ef84a402fbd/embedded" style=""><img src="https://images.youracclaim.com/size/680x680/images/b4fbd3ac-b964-4eaf-ac28-a286964ec49e/MOS_PowerPoint.png" alt="Microsoft Office Specialist PowerPoint" title="Microsoft Office Specialist PowerPoint" /></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/7ac76f20-c146-48b4-bb49-848d4faaf670/embedded" style=""><img src="https://images.youracclaim.com/images/73f09dc0-9a25-411f-99aa-c12cc898928f/MOS_Excel_Expert6.png" alt="Microsoft Office Specialist Excel Expert" title="Microsoft Office Specialist Excel Expert" /></a><br /></p>
 <!--		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="da545540-e511-4c98-ae7e-2ef84a402fbd" data-share-badge-host="https://www.youracclaim.com"></div><p><br /></p>
--->		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@outlook.com; ')"></input></a><br /><br /><br /></p>
+-->		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@outlook.com;')"></input></a><br /><br /><br /></p>
 		<!--Personal Info Ending-->
-		<p><a href="Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
+		<p><a href="Log.html" style="font-size:1em;color:#BEBEBE;" title="Website Log">Log</a><br /><br /></p>
 		<div id="div-center"></div>
 		<p><a rel="external" href="https://validator.w3.org/check?uri=referer"><img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" title="Valid XHTML 1.0 Strict" /></a></p>		
 		<p><a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" title="Valid CSS!" /></a></p>
