--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
 		<p><a href="weeklymusic.html" style="text-decoration:none;" rel="external"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
-		<p><a rel="external" href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;text-shadow: 0.5em 0.5em 2em #F6C;">Page Loading Effects (HTML5)</a><br /></p>
-		<p><a rel="external" href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;text-shadow: 0.5em 0.5em 2em #F6C;">Grid Effect (HTML5)</a><br /></p>
-		<p><a rel="external" href="number-progress/index.html" style="font-size:1.5em;color:#176785;text-shadow: 0.5em 0.5em 2em #F6C;">Number Progress (HTML5)</a><br /></p>
+		<p><a rel="external" href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;text-shadow: 0.5em 0.5em 2em #6CF;">Page Loading Effects (HTML5)</a><br /></p>
+		<p><a rel="external" href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;text-shadow: 0.5em 0.5em 2em #6CF;">Grid Effect (HTML5)</a><br /></p>
+		<p><a rel="external" href="number-progress/index.html" style="font-size:1.5em;color:#176785;text-shadow: 0.5em 0.5em 2em #6CF;">Number Progress (HTML5)</a><br /></p>
 		
-		<p><a rel="external" href="simulation/physics/faradays-law_en/faradays-law_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Faraday's Law (HTML5)</a><br /></p>
-		<p><a rel="external" href="simulation/physics/capacitor-lab-basics_en/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Capacitor LabBasics (HTML5)</a><br /></p>
-		<p><a rel="external" href="simulation/physics/circuit-construction-kit-dc_en/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Circuit Construction Kit DC (HTML5)</a><br /></p>
-		<p><a rel="external" href="simulation/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Circuit Construction Kit AC (JAVA)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/faradays-law_en/faradays-law_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Faraday's Law (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/capacitor-lab-basics_en/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Capacitor LabBasics (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/circuit-construction-kit-dc_en/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Circuit Construction Kit DC (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Circuit Construction Kit AC (JAVA)</a><br /></p>
 		
-		<p><a rel="external" href="webgl-clouds.html" style="font-size:1.5em;color:#326696;text-shadow: 0.5em 0.5em 2em #F6C;">Webgl Clouds (HTML5)</a><br /></p>
-		<p><a rel="external" href="crazy.html" style="font-size:1.5em;color:#A020F0;text-shadow: 0.5em 0.5em 2em #F6C;">Crazy Tentacles (HTML5)</a><br /></p>
-		<p><a rel="external" href="Demo1.html" style="font-size:1.5em;color:#F00;text-shadow: 0.5em 0.5em 2em #F6C;">Page Preloading (HTML5)</a><br /></p>
-		<p><a rel="external" href="ball.html" style="font-size:1.5em;color:#000;text-shadow: 0.5em 0.5em 2em #F6C;">Ball Pool (HTML5)</a><br /></p>
-		<p><a rel="external" href="textillate.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #F6C;">Textillate (HTML5)</a><br /></p>
-		<p><a rel="external" href="shine.html" style="font-size:1.5em;color:#BEBEBE;text-shadow: 0.5em 0.5em 2em #F6C;">Shine (HTML5)</a><br /></p>
-		<p><a rel="external" href="bubble.html" style="font-size:1.5em;color:#09F;text-shadow: 0.5em 0.5em 2em #F6C;">Bubbles (Javascript)</a><br /></p>
-		<p><a rel="external" href="loading.html" style="font-size:1.5em;color:#FF3C9B;text-shadow: 0.5em 0.5em 2em #F6C;">Loading (HTML5)</a><br /></p>
-		<p><a rel="external" href="snake.html" style="font-size:1.5em;color:#FFB6C1;text-shadow: 0.5em 0.5em 2em #F6C;">Snake (HTML5)</a><br /></p>
-		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:#0F0;text-shadow: 0.5em 0.5em 2em #F6C;">HTML Colour</a><br /><br /><br /></p>
+		<p><a rel="external" href="webgl-clouds.html" style="font-size:1.5em;color:#326696;text-shadow: 0.5em 0.5em 2em #6CF;">Webgl Clouds (HTML5)</a><br /></p>
+		<p><a rel="external" href="crazy.html" style="font-size:1.5em;color:#A020F0;text-shadow: 0.5em 0.5em 2em #6CF;">Crazy Tentacles (HTML5)</a><br /></p>
+		<p><a rel="external" href="Demo1.html" style="font-size:1.5em;color:#F00;text-shadow: 0.5em 0.5em 2em #6CF;">Page Preloading (HTML5)</a><br /></p>
+		<p><a rel="external" href="ball.html" style="font-size:1.5em;color:#000;text-shadow: 0.5em 0.5em 2em #6CF;">Ball Pool (HTML5)</a><br /></p>
+		<p><a rel="external" href="textillate.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Textillate (HTML5)</a><br /></p>
+		<p><a rel="external" href="shine.html" style="font-size:1.5em;color:#BEBEBE;text-shadow: 0.5em 0.5em 2em #6CF;">Shine (HTML5)</a><br /></p>
+		<p><a rel="external" href="bubble.html" style="font-size:1.5em;color:#09F;text-shadow: 0.5em 0.5em 2em #6CF;">Bubbles (Javascript)</a><br /></p>
+		<p><a rel="external" href="loading.html" style="font-size:1.5em;color:#FF3C9B;text-shadow: 0.5em 0.5em 2em #6CF;">Loading (HTML5)</a><br /></p>
+		<p><a rel="external" href="snake.html" style="font-size:1.5em;color:#FFB6C1;text-shadow: 0.5em 0.5em 2em #6CF;">Snake (HTML5)</a><br /></p>
+		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:#0F0;text-shadow: 0.5em 0.5em 2em #6CF;">HTML Colour</a><br /><br /><br /></p>
 		<!--Function Link Ending-->
 		<!--Personal Info-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
