--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 		<p><a rel="external" href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;text-shadow: 0.5em 0.5em 2em #6CF;">Grid Effect (HTML5)</a><br /></p>
 		<p><a rel="external" href="number-progress/index.html" style="font-size:1.5em;color:#176785;text-shadow: 0.5em 0.5em 2em #6CF;">Number Progress (HTML5)</a><br /></p>
 		
-		<p><a rel="external" href="simulation/physics/faradays-law_en/faradays-law_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Faraday's Law (HTML5)</a><br /></p>
-		<p><a rel="external" href="simulation/physics/capacitor-lab-basics_en/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Capacitor LabBasics (HTML5)</a><br /></p>
-		<p><a rel="external" href="simulation/physics/circuit-construction-kit-dc_en/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Circuit Construction Kit: DC (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/faradays-law_en/" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Faraday's Law (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/capacitor-lab-basics_en/" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Capacitor LabBasics (HTML5)</a><br /></p>
+		<p><a rel="external" href="simulation/physics/circuit-construction-kit-dc_en/" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Circuit Construction Kit: DC (HTML5)</a><br /></p>
 		<p><a rel="external" href="simulation/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Circuit Construction Kit: AC (JAVA)</a><br /></p>
 		
 		<p><a rel="external" href="webgl-clouds.html" style="font-size:1.5em;color:#326696;text-shadow: 0.5em 0.5em 2em #6CF;">Webgl Clouds (HTML5)</a><br /></p>
