--- a/number-progress/index.html
+++ b/number-progress/index.html
@@ -1,11 +1,9 @@
-﻿<!DOCTYPE html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en-gb">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NumberProgressBar</title>
-		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" /> 
-		<link rel="apple-touch-icon" href="../favicon.ico" />
+  <title>Number Progress Bar</title>
   <link rel="stylesheet" type="text/css" href="assets/normalize.css" />
   <link rel="stylesheet" type="text/css" href="assets/style.css" />
   <link rel="stylesheet" type="text/css" href="assets/number-pb.css" />
@@ -52,8 +50,7 @@
     <div class="control full">100</div>
   </section>
 
-  <p><a href="https://yaozeye.github.io" rel="externak">Yaoze YE</a></p>
-  <p><a href="https://github.com/yaozeye/yaozeye.github.io/number-progress/" rel="external">This idea</a> was designed by <a href="https://yaozeye.github.io">Yaoze Ye</a> by HTML + CSS.</p>
+  <p><a href="https://github.com/yaozeye/yaozeye.github.io/number-progress/" rel="external">This idea</a> was designed with HTML + CSS.</p>
   <div class="footer-banner" style="width:728px; margin:60px auto"></div>
 </div>
 
