--- a/adaptive-placeholders/index.html
+++ b/adaptive-placeholders/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Adaptive Placeholder</title>
-	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" /> 
-	<link rel="apple-touch-icon" href="../favicon.ico" />
-    <link rel="stylesheet" href="style.css">
-		<script type="text/javascript" src="../js/targetblank.js"></script>
+	<head>
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+		<title>Adaptive Placeholder</title>
+		<link rel="stylesheet" href="style.css">
 		<!--[if lte IE 9]><script type="text/javascript" src="../select/selectivizr.js"></script><![endif]-->
-</head>
-<body>
-    <div style="width:400px;height:100px;margin:300px auto">
-        <form>
-            <input required='' type='text'>
-            <label alt='Input Text' placeholder='Text'></label>
-        </form>
-    </div>
-<div class="footer-banner" style="width:728px; margin:200px auto 0"></div>
-</body>
+	</head>
+	<body>
+		<div style="width:400px;height:100px;margin:300px auto">
+			<form>
+				<input required='' type='text' />
+				<label alt='Input Text' placeholder='Text'></label>
+			</form>
+		</div>
+		<div class="footer-banner" style="width:728px; margin:200px auto 0"></div>
+	</body>
 </html>
