--- a/grid-effect/index2.html
+++ b/grid-effect/index2.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-us" class="no-js">
+<html lang="en-gb" class="no-js">
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>3D Grid Effect | Demo 1</title>
+		<title>3D Grid Effect | Demo 2</title>
 		<meta name="keywords" content="3d, grid, effect, flip, css transform, perspective, web design" />
-		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
@@ -14,7 +13,6 @@
 		<style>
 			.codrops-header {
 				margin-top: 60px;
-				font-family: 'Microsoft Yahei'
 			}
 			.codrops-demos {
 				margin: 20px;
