--- a/page-loading-effects/index.html
+++ b/page-loading-effects/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-gb">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1" /> 
-		<title>Page Loading Effects|Demo</title>
+		<title>Page Loading Effects | Demo</title>
 		<meta name="description" content="Page Loading Effects: " />
 		<meta http-equiv="imagetoolbar" content="false" />
-		<meta name="author" content="yaozeye.github.io" />
-		<meta name="Copyright" content="Copyright yaozeye.github.io All Rights Reserved." />
 		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" /> 
-		<link rel="apple-touch-icon" href="../favicon.ico" />
 		<script src="js/snap.svg-min.js"></script>
 		<script type="text/javascript" src="../js/targetblank.js"></script>
 		<!--[if lte IE 9]><script type="text/javascript" src="../select/selectivizr.js"></script><![endif]-->
-		<!--[if IE]>
-  		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 	</head>
 	<body>
 		<div id="pagewrap" class="pagewrap">
