--- a/page-transitions/index.html
+++ b/page-transitions/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" class="no-js">
+<html lang="en-gb" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -7,8 +7,6 @@
 		<title>Page Transitions</title>
 		<meta name="description" content="A Collection of Page Transitions with CSS Animations" />
 		<meta name="keywords" content="page transition, css animation, website, effect, css3, jquery" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico"> 
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/multilevelmenu.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
