--- a/page-transitions/index.html
+++ b/page-transitions/index.html
@@ -163,7 +163,7 @@
 		</div>
 		
 		<div class="pt-message">
-			<p>Your browser does not support CSS animation, please use Chrome, FireFox or Safari.</p>
+			<p>Your browser does not support CSS animation, please use modern browsers, such as Mozilla FireFox.</p>
 		</div>
 		<script src="js/jquery.dlmenu.js"></script>
 		<script src="js/pagetransitions.js"></script>
