--- a/parallax-slider/index.html
+++ b/parallax-slider/index.html
@@ -3,12 +3,11 @@
     <head>
         <title>Parallax Slider with jQuery</title>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-		<meta http-equiv="Content-Language" content="en-us" />
+		<meta http-equiv="Content-Language" content="en-gb" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="imagetoolbar" content="false" />
         <meta name="description" content="Parallax Slider with jQuery" />
         <meta name="keywords" content="parallax, jquery, slider, slideshow, rotation, perspective"/>
-		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script src="js/cufon-yui.js" type="text/javascript"></script>
 		<script src="js/ChunkFive_400.font.js" type="text/javascript"></script>
