--- a/sidebar-transitions/index.html
+++ b/sidebar-transitions/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" class="no-js">
+<html lang="en-gb" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -7,8 +7,6 @@
 		<title>Sidebar Transitions</title>
 		<meta name="description" content="Sidebar Transitions: Transition effects for off-canvas views" />
 		<meta name="keywords" content="transition, off-canvas, navigation, effect, 3d, css3, smooth" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<!-- <link rel="stylesheet" type="text/css" href="css/icons.css" /> -->
