--- a/Log.html
+++ b/Log.html
@@ -78,6 +78,7 @@
 		<p><br />11 June<br />MCT badges added for 2022-2023 & 2023-2024<br /><br /></p>
 		<p><br /><br /><br /><br /></p>
 		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
+		<iframe id="Earth" src="https://onedrive.live.com/embed?resid=D80E56BF2E593779%2127110&amp;authkey=!AKlf4RIGZeSAoFU&amp;em=2&amp;wdAr=1&amp;wdEaaCheck=1" width="540px" height="540px" frameborder="0">This is an embedded <a rel="external" href="https://office.com">Microsoft Office</a> presentation, powered by <a rel="external" href="https://office.com/webapps">Microsoft 365</a>.</iframe>
 <p><a rel="external" style="text-decoration:none" href="https://jigsaw.w3.org/css-validator/check/referer">
 <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
 <img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-svg11" alt="Valid SVG!" />
