--- a/Log.html
+++ b/Log.html
@@ -18,48 +18,46 @@
 		<p style="font-size:40px;color:white;text-shadow: 1px 15px 45px #FFFFFF;">Website History</p><p></p>
 		<p>Last Updated On 11 June 2023:<br />❤<br /><br /><br /></p>
 		<h1>2017</h1>
-		<p><br />04 October - 05 October<br />The first build of this site.<br />with	"<br />YaozeYE Personal Page<br />crazy-tentacles(HTML5) <br />page-preloading1(HTML5) <br />page-preloading2(HTML5) <br />ball-pool(HTML5) <br />textillate(HTML5) <br />shine(HTML5) <br />HTML_color <br /><br />GitHub <br />Twitter <br />Tencent QQ <br />Email  <br />"<br /><br /></p>
+		<p><br />04 October - 05 October<br />The first build of this site.<br />with	"<br />YaozeYE Personal Page<br />crazy-tentacles(HTML5) <br />page-preloading1(HTML5) <br />page-preloading2(HTML5) <br />ball-pool(HTML5) <br />textillate(HTML5) <br />shine(HTML5) <br />HTML_color<br /><br />GitHub<br />Email<br />"<br /><br /></p>
 		<p>06 October<br />Add	"<br />Bubbles(Javascript) <br />loading(HTML5) <br />snake(HTML5)<br />"<br />Change Github image<br />from<br />420x420px (Internet github.com)<br />to <br />200x200px (local)<br /><br />separate the loading canvas of Homepage<br />to<br />loading(HTML5)<br /><br /></p>
 		<p>10 October<br />Add "<br />Music<br />'including one song by flash and five songs by iframe'<br />"<br /></p>
-		<p>13 October<br />Add link to "Email" (mail.qq.com)<br /><br /></p>
 		<p>22 October<br />Concept Revised<br /><br /></p>
 		<p>29 October<br />Halloween Theme<br /><br /></p>
 		<p>30 October<br />iisstart image changed<br />github image removed<br />file name and link changed ( Website.html to index.html )<br />index improved<br />index text-align added<br /><br /></p>
 		<p>06 November<br />Halloween Theme removed<br />November added<br /><br /></p>
 		<p>07 November<br />index body ::selection improved<br />index background-color changed(from orange to violet(#EE82EE))<br />iisstart image suitable for the new background-color<br /><br /></p>
-		<p>08 November<br />site-wide HTTPS supported<br />external domain *.js removed<br />bubble instruction improved<br />Cache-Control no-siteapp added to all *.html files<br />HTML_color hexadecimal color display name all changed from lowercase to upper-case<br />added keywords to index<br />Demo1 and Demo2 Chinese characters changed to English words<br />Demo series code optimized<br />bubble keywords removed<br />slidetounlock code fixed and improved<br /><br />
-		<p>10 November<br />That's incredible that I have updated the 1111 theme...<br /><br /></p>
-		<p>11 November<br />That's incredible that I have improved the 1111 theme...<br />favicon added<br />keywords removed<br />iisstart image get from Pic Bed ( https://sm.ms/ )<br />1111 theme removed<br /><br /></p>
+		<p>08 November<br />site-wide HTTPS supported<br />external domain *.js removed<br />bubble instruction improved<br />Cache-Control no-siteapp added to all *.html files<br />HTML_color hexadecimal color display name all changed from lowercase to upper-case<br />added keywords to index<br />Demo series code optimised<br />bubble keywords removed<br />slidetounlock code fixed and improved<br /><br />
+		<p>11 November<br />favicon added<br />keywords removed<br /><br /></p>
 		<p>12 November<br />music page "text fixed<br />song and artist names displayed when iframe is invalid<br />6 more songs available<br />previous songs ( iframe only ) have been proved to be inaudible for unknown reasons<br />iframe width adjusted<br />layout adjusted<br />html file grammar revised<br />"<br /><br /><br /></p>
 		<p>13 November<br />music.html notice updated<br />unavailable songs removed<br /><br /><br /></p>
 		<p>14 November<br />1 more song added<br /><br /><br /></p>
-		<p>15 November<br />index code optimized<br /><br /><br /></p>
+		<p>15 November<br />index code optimised<br /><br /><br /></p>
 		<p>16 November<br />Log.html xhtml strict standard referer removed<br /><br /></p>
-		<p>18 November<br />Log.html svg modified<br />website code optimized<br />index font changed<br />index small-caps added<br /><br /><br /></p>
-		<p>19 November<br />webgl-clouds(html5) added<br />css available now<br />index data unit changed from 'px' to 'em'<br />Today's update may reduce 0.01ms-500ms loading time.<br />music! the first step of 'Weekly Music'<br /><br /><br /></p>
+		<p>18 November<br />Log.html svg modified<br />website code optimised<br />index font changed<br />index small-caps added<br /><br /><br /></p>
+		<p>19 November<br />webgl-clouds(html5) added<br />css available now<br />index data unit changed from 'px' to 'em'<br />Today's update may reduce loading time.<br />music! the first step of 'Weekly Music'<br /><br /><br /></p>
 		<p>25 November<br />Weekly Music Updated ( Nov.26 - Dec.02 )<br /><br /><br /></p>
-		<p>27 November<br />weekly music redirect page optimized<br /><br /><br /></p>
+		<p>27 November<br />weekly music redirect page optimised<br /><br /><br /></p>
 		<p>30 November<br />index december welcome words added<br />css simplified, index code simplified<br /><br /><br /></p>
 		<p>02 December<br />weekly music updated<br /><br /></p>
 		<p>09 December<br />weekly music updated<br /><br /><br /></p>
 		<p>11 December<br />css simplified<br /><br /><br /></p>
 		<p>12 December<br />css improved<br />site-wide compatibility improved ( for IE browser version below Internet Explorer 10)<br />Log code simplified<br />font revised<br />background color changed from #EE82EE to #4B9EFF<br /><br /><br /></p>
-		<p>16 December<br />weekly music updated<br />partly optimized for w3 standard<br /><br /></p>
-		<p>17 December<br />study content added<br />optimized<br /><br /></p>
-		<p>20 December<br />optimized<br /><br /></p>
+		<p>16 December<br />weekly music updated<br />partly optimised for w3 standard<br /><br /></p>
+		<p>17 December<br />study content added<br />optimised<br /><br /></p>
+		<p>20 December<br />optimised<br /><br /></p>
 		<p>21 December<br />index div modified<br />Email button modified<br />css file divided<br />weekly music series grammar standard improved in future<br /><br /></p>
-		<p>23 December<br />weekly music updated<br />partly optimized for w3 standard<br /><br /></p>
+		<p>23 December<br />weekly music updated<br />partly optimised for w3 standard<br /><br /></p>
 		<p>24 December<br />XMAS THEME ADDED<br /><br /><br /><br /><br /></p>
 		<h1>2018</h1>
 		<p><br />06 January<br />code simplified<br />meta added<br />Safari, Firefox support improved<br /><br /></p>
 		<p>07 January<br />direction revised<br /><br /></p>
 		<p>14 January<br />PhET Simulations added<br /><br /></p>
 		<p>25 January<br />index javascript test<br />calc added<br /><br /></p>
-		<p>26 January<br />index javascript modified<br />log site-wide pure https offered<br />log code simplified<br /><br /></p>
+		<p>26 January<br />index javascript modified<br />Log pure https supported<br />Log code simplified<br /><br /></p>
 		<p>29 January<br />index javascript modified<br /><br /></p>
 		<p>31 January<br />Log HTML5 passed<br />HTML 5 logo svg added, source changed from w3c to local and modified<br /><br /></p>
 		<p>01 February<br />sync GitHub<br /><br /></p>
-		<p>23 February<br />sim optimized<br />Log code simplified<br /><br /></p>
+		<p>23 February<br />sim optimised<br />Log code simplified<br /><br /></p>
 		<p>17 March<br />sync GitHub<br />simulation Circuit Construction Kit: DC updated<br /><br /></p>
 		<p>31 March<br />April Theme<br />Page Loading Effects<br /><br /></p>
 		<p>14 April<br />text modified<br /><br /></p>
@@ -70,7 +68,7 @@
 		<p><br />24 July<br />index code slightly simplified<br /><br /></p>
 		<p><br />26 July<br />index optimised<br />Log text revised<br /><br /></p>
 		<p><br />26 July<br />videosub added<br />iframe external video player pages added (experimental)<br /><br /></p>
-		<p><br />31 December<br />index 2020<br />css font modification<br /><br /><br /><br /></p>
+		<p><br />31 December<br />index 2020<br />css font set changed<br /><br /><br /><br /></p>
 		<h1>2020</h1>
 		<p><br />28 June<br />index theme changed<br />index MOS, MCT badge added<br />index video links removed<br />font changed<br /><br /></p>
 		<p><br /><br /><br /><br /></p>
