--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:#0F0;text-shadow: 0.5em 0.5em 2em #6CF;">HTML Colour</a><br /><br /><br /></p>
 		<!--Function Link Ending-->
 		<!--Personal Info-->
-		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
+		<p style="font-size:2em;color:grey;"><i>------Me------</i><br /></p>
 		<p><a rel="external" href="https://github.com/yaozeye" style="" title="GitHub">GitHub</a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/1edf86e0-1fc3-4f25-b5b8-e2cac26917ec/embedded" style=""><img src="https://images.youracclaim.com/images/fd6bb2af-2f05-4d9b-a23e-39f8e309a82d/image.png" alt="Microsoft Certified Trainer 2023-2024" title="Microsoft Certified Trainer 2023-2024" /></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/dbc44d95-5b5a-46d6-9d33-9b63778c9d0d/embedded" style=""><img src="https://images.youracclaim.com/images/bb4156e4-c2e1-4399-b03c-af6feb7a6cc4/image.png" alt="Microsoft Certified Trainer 2022-2023" title="Microsoft Certified Trainer 2022-2023" /></a><br /></p>
