--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<link rel="apple-touch-icon" href="favicon.ico" />
 		<script type="text/javascript" src="js/targetblank.js"></script>
 		<!--[if lte IE 9]><script type="text/javascript" src="select/selectivizr.js"></script><![endif]-->
-		<title>ホーム｜葉-YaozeYE</title>
+		<title>ホーム｜葉-yaozeye</title>
 	</head>
 	<body>
 		<h1 style="text-shadow: 0.25em 2.5em 7.5em #993300;background:linear-gradient(to bottom, rgba(239,234,58,0) 0%,rgba(239,234,58,0) 48%,rgba(239,234,58,1) 49%,rgba(239,234,58,1) 86%,rgba(239,234,58,0) 87%);"><i><b>YaozeYE Personal Page</b></i></h1><!--<hr />-->
