--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<h2 style="font-size:4em;color:white;text-shadow: 0.125em 0.125em 0.25em #F00, 0 0 1em #00F, 0 0 0.2em #00F;"><i><b>Merry<br />Christmas<br />🎄<br />2023<br />☃️<br />メリー<br />クリスマス</b></i></h2>
 		<p><a href="weeklymusic.html" style="text-decoration:none;" rel="external"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
-		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
+		<p style="font-size:2em;color:grey;"><i>------Pages------</i><br /></p>
 		
 		<p><a rel="external" href="simulation/physics/faradays-law_en/" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Faraday's Law (HTML5)</a><br /></p>
 		<p><a rel="external" href="simulation/physics/capacitor-lab-basics_en/" style="font-size:1.5em;color:#FFF;text-shadow: 0.5em 0.5em 2em #6CF;">Capacitor Lab Basics (HTML5)</a><br /></p>
