--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Language" content="en-gb" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="imagetoolbar" content="false" />
-		<meta name="description" content="Yaoze Ye Personal Website." />
+		<meta name="description" content="yaozeye." />
 		<meta name="robots" content="all" />
 		<meta name="author" content="yaozeye.github.io" />
 		<meta name="Copyright" content="Copyright yaozeye.github.io All Rights Reserved." />
