--- a/Log.html
+++ b/Log.html
@@ -74,7 +74,7 @@
 		<p><br /><br /><br /><br /></p>
 		<h1>2023</h1>
 		<p><br />11 June<br />MCT badges added for 2022-2023 & 2023-2024<br /><br /></p>
-		<p><br />15 December<br />Christmas<br /><br /></p>
+		<p><br />15 December<br />🎄<br /><br /></p>
 		<p><br /><br /><br /><br /></p>
 		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
 		<iframe id="Earth" src="https://onedrive.live.com/embed?resid=D80E56BF2E593779%2127110&amp;authkey=!AKlf4RIGZeSAoFU&amp;em=2&amp;wdAr=1&amp;wdEaaCheck=1" width="540px" height="540px" frameborder="0">This is an embedded <a rel="external" href="https://office.com">Microsoft Office</a> presentation, powered by <a rel="external" href="https://office.com/webapps">Microsoft 365</a>.</iframe>
