--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<h1 style="text-shadow: 0.25em 2.5em 7.5em #993300;background:linear-gradient(to bottom, rgba(239,234,58,0) 0%,rgba(239,234,58,0) 48%,rgba(239,234,58,1) 49%,rgba(239,234,58,1) 86%,rgba(239,234,58,0) 87%);"><i><b>yaozeye</b></i></h1><!--<hr />-->
-		<h2 style="font-family:Source Serif Pro, Noto Serif, Source Han Serif JP, Noto Serif Japanese, Serif;font-size:4em;color:white;text-shadow: 0.125em 0.125em 0.25em #F00, 0 0 1em #00F, 0 0 0.2em #00F;"><i><b>Happy<br />Halloween!<br />🎃<br />2024<br />☃️☃️<br />メリー<br />クリスマス!<br />Aug</b></i></h2>
+		<h2 style="font-family:Source Serif Pro, Noto Serif, Source Han Serif JP, Noto Serif Japanese, Serif;font-size:4em;color:white;text-shadow: 0.125em 0.125em 0.25em #F00, 0 0 1em #00F, 0 0 0.2em #00F;"><i><b>Happy<br />Halloween!<br />🎃<br />2024<br />☃️☃️</b></i></h2>
 		<p><a href="weeklymusic.html" style="text-decoration:none;" rel="external"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Pages------</i><br /></p>
