Update and rename to blank.html

--- a/blank.html
+++ b/blank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0;url=https://www.bilibili.com/video/av34822509/" />
+		<meta http-equiv="refresh" content="0;url=about:blank" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
 		<link rel="apple-touch-icon" href="favicon.ico" />
 		<link rel="stylesheet" href="common/init.css" />
